<resources>
    <string name="app_name">AppT2</string>
    <string name="welcome">Bienvenido</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register_prompt">¿No tienes una cuenta? Regístrate aquí</string>
    <string name="create_account">Crear Nueva Cuenta</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="register">Registrarse</string>
    <string name="login_prompt">¿Ya tienes una cuenta? Inicia sesión</string>
    <string name="add_pet">Añadir Nueva Mascota</string>
    <string name="edit_pet">Editar Mascota</string>
    <string name="pet_name">Nombre</string>
    <string name="pet_type">Tipo</string>
    <string name="pet_age">Edad</string>
    <string name="pet_image">Imagen de la mascota</string>
    <string name="select_image">Seleccionar Imagen</string>
    <string name="save_pet">Guardar Mascota</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="volver">Volver</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="no_tienes_una_cuenta_reg_strate_aqu">¿No tienes una cuenta? Regístrate aquí</string>
    <string name="mis_mascotas">Mis Mascotas</string>
    <string name="crear_nueva_cuenta">Crear Nueva Cuenta</string>
    <string name="correo_electr_nicot">Correo Electrónico</string>
    <string name="contrase_at">Contraseña</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="ya_tienes_una_cuenta_inicia_sesi_n">¿Ya tienes una cuenta? Inicia sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombre">Nombre</string>
    <string name="tipo">Tipo</string>
    <string name="edad">Edad</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar">Editar</string>
</resources>