<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/gradient_background"
    tools:context=".ui.mascota.MascotaAddEditActivity">

    <!-- Contenedor horizontal para el botón Volver y el título -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <!-- Botón de Volver -->
        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volver"
            app:icon="@drawable/ic_back"
            android:backgroundTint="@color/primary40"
            android:textColor="@android:color/white"
            android:padding="8dp"
            android:textSize="14sp"
            app:cornerRadius="4dp" />

        <!-- Título -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_pet"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/neutral_variant10"
            android:gravity="center"
            android:layout_marginStart="16dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivPetImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:contentDescription="@string/pet_image"
        android:src="@android:drawable/ic_menu_gallery"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnSelectImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/select_image"
        android:backgroundTint="@color/primary40"
        android:textColor="@android:color/white"
        android:layout_marginBottom="16dp"
        app:cornerRadius="8dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPetName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:hintTextColor="@color/neutral_variant30"
        app:boxStrokeColor="@color/neutral_variant30"
        android:hint="@string/pet_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPetName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/neutral_variant10"
            android:background="@color/neutral90"
            android:padding="16dp"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPetType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:hintTextColor="@color/neutral_variant30"
        app:boxStrokeColor="@color/neutral_variant30"
        android:hint="@string/pet_type">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPetType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/neutral_variant10"
            android:background="@color/neutral90"
            android:padding="16dp"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPetAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:hintTextColor="@color/neutral_variant30"
        app:boxStrokeColor="@color/neutral_variant30"
        android:hint="@string/pet_age">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPetAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/neutral_variant10"
            android:background="@color/neutral90"
            android:padding="16dp"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSavePet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_pet"
        android:backgroundTint="@color/primary40"
        android:textColor="@android:color/white"
        android:padding="12dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="8dp" />
</LinearLayout>